--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/kowmat/ledgendarify#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "request": "^2.88.0",
     "spotify-web-api-node": "^4.0.0",
     "ws": "^7.2.0"
   }
